# ollamalocalchat

./: .replit  README.md  app.py  commands.txt  main.py  models.py  pyproject.toml  requirements.txt  tools.py
attached_assets/: Pasted--File-ollamapython-README-md-Running-Examples-Run-the-examples-in-this-directory-with--1739222174919.txt  Pasted--File-ollamapython-async-tools-py-import-asyncio-import-ollama-from-ollama-import-ChatResp-1739212309006.txt  Pasted--File-ollamapython-tools-py-from-ollama-import-ChatResponse-chat-def-add-two-numbers-a--1739221553777.txt  Pasted-D-durgas-deepseek-ollama-python-main-examples-python-ollamapython-list-py-Name-nous-hermes2-lates-1739224250407.txt  Pasted-D-durgas-deepseek-ollama-python-main-examples-python-ollamapython-list-py-Name-nous-hermes2-lates-1739232420857.txt  Pasted-Explanation-The-error-Uncaught-SyntaxError-Identifier-progressArea-has-already-been-declared--1739226847294.txt
static/css/: style.css
static/js/: chat.js
templates/: index.html
